# agent_interpret

./: .gitignore  EXPERIMENTS.md  GPU_QUICKSTART.md  PENDING_TASKS.md  README.md  RESULTS_INDEX.md  RESULTS_LEDGER.md  pyproject.toml
configs/: local_qwen3_5_9b_ollama.yaml  mistral_7b_v03.yaml  qwen2_5_14b.yaml  qwen2_5_7b.yaml  qwen2_5_coder_7b.yaml
paper/: benchmark_audit.csv  benchmark_audit.summary.json  local_report.summary.json  main.tex  references.bib
scripts/: 01_generate_dataset.py  02_run_behavior_eval.py  03_extract_activations.py  04_train_linear_probes.py  05_compute_tool_directions.py  06_rank_neurons.py  07_activation_patching.py  08_extract_components.py  09_rank_components.py  10_activation_steering.py  11_component_ablation.py  12_compare_patching_controls.py  13_make_figures.py  14_generate_challenge_set.py  15_screen_heads.py  16_validate_head.py  17_analyze_head_attention.py  18_validate_prompt_order.py  19_summarize_patching_seeds.py  20_summarize_l26h4_seeds.py  21_generate_lexical_control.py  22_audit_lexical_control.py  23_summarize_lexical_control.py  24_review_benchmark.py  25_validate_benchmark_audit.py  26_ai_review_benchmark.py  26_prepare_review_draft.py  27_summarize_cross_model.py  28_make_local_report.py  29_summarize_component_replication.py  run_all_local_7b.sh  run_lexical_control_build.sh  run_local_report.sh  run_mistral_7b.sh  run_mistral_components.sh  run_qwen_coder_7b.sh  run_qwen_coder_components.sh  run_qwen_head_screen.sh  run_qwen_head_sign_validation.sh  run_qwen_head_specificity.sh  (+14 more)
tests/: test_core.py
(+18 files in other folders)
